* Modify fuse.Array methods so they can be dumped to the global for Prototype emulation. [jddalton]

* Remove support for null callbacks from fuse.Array, fuse.Hash, and fuse.Class.mixins.enumerable methods. [jddalton]
  Note: Backwards compatibility warning.

* Add fuse.dom.Element#destroy and fuse.dom.Element#purge. [FuseJS LH #71, #72] [jddalton]

* Add XHTML support for FuseJS. [jddalton]

* Make fuse.String escapeHTML()/unescapeHTML() escape only `<`, `>`, and `&` characters by default and escape more entities by passing a truthy `all` argument. [FuseJS LH #65] [jddalton]

* Allow decorator caching options to accept non null/undefined falsy values. [jddalton]

* Reduce recursion in the element cloner() function and make getScripts() absorb getByTagName(). [jddalton]

* Optimize NodeList modification methods by creating an element/fragment once instead of for each iteration. [jddalton]

* Add fuse.dom.HTMLElement and move HTML related methods from fuse.dom.Element to HTMLElement. [jddalton]

* Remove partial support for elements being passed to fuse.Object.toJSON(). [jddalton]

* Make fuse.dom.Element#show work with elements hidden by stylesheet rules. [jddalton Joe Gornick]

* Add table of default attribute values so fuse.dom.Element#getAttribute may consistently resolve them across browsers. [fabiomcosta, jddalton] 

* Add ability to exit early from fuse.Object.each() by returning false from the callback and allow setting the `this` of the callback. [jddalton]

* Make fuse.Object.getClassOf() more closely follow the spirit of the specification and throw a TypeError when passed an undefined or null value. [jddalton, kangax]

* When in debug mode execute event handlers separately from the loop iterating over them allowing all handlers to execute despite errors that may be thrown. [jddalton]

* Add fuse.debug detection for the window's url containing `fusejs_debug` in the query or `debug` in the fusejs script src query to trigger debug mode. [jddalton]